// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkDialingCodeList should render correctly 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "dialingCode": "0",
            "id": "0",
            "name": "Zero",
          },
        ],
        "title": "Z",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "1",
            "id": "1",
            "name": "One",
          },
        ],
        "title": "O",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "2",
            "id": "2",
            "name": "Two",
          },
        ],
        "title": "T",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          Object {
            "dialingCode": "0",
            "id": "0",
            "name": "Zero",
          },
        ],
        "title": "Z",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "1",
            "id": "1",
            "name": "One",
          },
        ],
        "title": "O",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "2",
            "id": "2",
            "name": "Two",
          },
        ],
        "title": "T",
      },
    ]
  }
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={false}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderTopColor": "rgb(221, 221, 229)",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "textAlign": "left",
              },
              Object {
                "fontFamily": "sans-serif-medium",
              },
              Object {
                "color": "rgb(104, 105, 127)",
              },
            ]
          }
        >
          Z
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityLabel="0 Zero"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": false,
            "color": null,
            "type": "RippleAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 48,
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            resizeMode="contain"
            style={
              Array [
                Object {
                  "borderColor": "rgb(221, 221, 229)",
                  "borderWidth": 1,
                },
                Object {
                  "height": 16,
                  "width": 24,
                },
                Array [
                  null,
                  Object {
                    "marginRight": 32,
                  },
                ],
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgb(17, 18, 54)",
                  "fontFamily": "sans-serif",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": -0.2,
                  "textAlign": "left",
                },
                Object {},
                Array [
                  Object {
                    "flex": 1,
                  },
                ],
              ]
            }
          >
            0 Zero
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "rgb(221, 221, 229)",
                "borderRadius": 20,
                "borderWidth": 1,
                "height": 20,
                "justifyContent": "center",
                "width": 20,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 10,
                  "height": 10,
                  "width": 10,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderTopColor": "rgb(221, 221, 229)",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "textAlign": "left",
              },
              Object {
                "fontFamily": "sans-serif-medium",
              },
              Object {
                "color": "rgb(104, 105, 127)",
              },
            ]
          }
        >
          O
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityLabel="1 One"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": false,
            "color": null,
            "type": "RippleAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 48,
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            resizeMode="contain"
            style={
              Array [
                Object {
                  "borderColor": "rgb(221, 221, 229)",
                  "borderWidth": 1,
                },
                Object {
                  "height": 16,
                  "width": 24,
                },
                Array [
                  null,
                  Object {
                    "marginRight": 32,
                  },
                ],
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgb(17, 18, 54)",
                  "fontFamily": "sans-serif",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": -0.2,
                  "textAlign": "left",
                },
                Object {},
                Array [
                  Object {
                    "flex": 1,
                  },
                ],
              ]
            }
          >
            1 One
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "rgb(221, 221, 229)",
                "borderRadius": 20,
                "borderWidth": 1,
                "height": 20,
                "justifyContent": "center",
                "width": 20,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 10,
                  "height": 10,
                  "width": 10,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderTopColor": "rgb(221, 221, 229)",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "textAlign": "left",
              },
              Object {
                "fontFamily": "sans-serif-medium",
              },
              Object {
                "color": "rgb(104, 105, 127)",
              },
            ]
          }
        >
          T
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityLabel="2 Two"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": false,
            "color": null,
            "type": "RippleAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 48,
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            resizeMode="contain"
            style={
              Array [
                Object {
                  "borderColor": "rgb(221, 221, 229)",
                  "borderWidth": 1,
                },
                Object {
                  "height": 16,
                  "width": 24,
                },
                Array [
                  null,
                  Object {
                    "marginRight": 32,
                  },
                ],
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgb(17, 18, 54)",
                  "fontFamily": "sans-serif",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": -0.2,
                  "textAlign": "left",
                },
                Object {},
                Array [
                  Object {
                    "flex": 1,
                  },
                ],
              ]
            }
          >
            2 Two
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "rgb(221, 221, 229)",
                "borderRadius": 20,
                "borderWidth": 1,
                "height": 20,
                "justifyContent": "center",
                "width": 20,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 10,
                  "height": 10,
                  "width": 10,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;

exports[`Android BpkDialingCodeList should render correctly with "selectedId" set 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "dialingCode": "0",
            "id": "0",
            "name": "Zero",
          },
        ],
        "title": "Z",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "1",
            "id": "1",
            "name": "One",
          },
        ],
        "title": "O",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "2",
            "id": "2",
            "name": "Two",
          },
        ],
        "title": "T",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          Object {
            "dialingCode": "0",
            "id": "0",
            "name": "Zero",
          },
        ],
        "title": "Z",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "1",
            "id": "1",
            "name": "One",
          },
        ],
        "title": "O",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "2",
            "id": "2",
            "name": "Two",
          },
        ],
        "title": "T",
      },
    ]
  }
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={false}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderTopColor": "rgb(221, 221, 229)",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "textAlign": "left",
              },
              Object {
                "fontFamily": "sans-serif-medium",
              },
              Object {
                "color": "rgb(104, 105, 127)",
              },
            ]
          }
        >
          Z
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityLabel="0 Zero"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": false,
            "color": null,
            "type": "RippleAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 48,
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            resizeMode="contain"
            style={
              Array [
                Object {
                  "borderColor": "rgb(221, 221, 229)",
                  "borderWidth": 1,
                },
                Object {
                  "height": 16,
                  "width": 24,
                },
                Array [
                  null,
                  Object {
                    "marginRight": 32,
                  },
                ],
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgb(17, 18, 54)",
                  "fontFamily": "sans-serif",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": -0.2,
                  "textAlign": "left",
                },
                Object {},
                Array [
                  Object {
                    "flex": 1,
                  },
                  Object {
                    "color": "rgb(7, 112, 227)",
                  },
                ],
              ]
            }
          >
            0 Zero
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "rgb(221, 221, 229)",
                "borderRadius": 20,
                "borderWidth": 1,
                "height": 20,
                "justifyContent": "center",
                "width": 20,
              },
              Object {
                "borderColor": "rgb(7, 112, 227)",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 10,
                  "height": 10,
                  "width": 10,
                },
                Object {
                  "backgroundColor": "rgb(7, 112, 227)",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderTopColor": "rgb(221, 221, 229)",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "textAlign": "left",
              },
              Object {
                "fontFamily": "sans-serif-medium",
              },
              Object {
                "color": "rgb(104, 105, 127)",
              },
            ]
          }
        >
          O
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityLabel="1 One"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": false,
            "color": null,
            "type": "RippleAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 48,
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            resizeMode="contain"
            style={
              Array [
                Object {
                  "borderColor": "rgb(221, 221, 229)",
                  "borderWidth": 1,
                },
                Object {
                  "height": 16,
                  "width": 24,
                },
                Array [
                  null,
                  Object {
                    "marginRight": 32,
                  },
                ],
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgb(17, 18, 54)",
                  "fontFamily": "sans-serif",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": -0.2,
                  "textAlign": "left",
                },
                Object {},
                Array [
                  Object {
                    "flex": 1,
                  },
                ],
              ]
            }
          >
            1 One
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "rgb(221, 221, 229)",
                "borderRadius": 20,
                "borderWidth": 1,
                "height": 20,
                "justifyContent": "center",
                "width": 20,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 10,
                  "height": 10,
                  "width": 10,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderTopColor": "rgb(221, 221, 229)",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "textAlign": "left",
              },
              Object {
                "fontFamily": "sans-serif-medium",
              },
              Object {
                "color": "rgb(104, 105, 127)",
              },
            ]
          }
        >
          T
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityLabel="2 Two"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": false,
            "color": null,
            "type": "RippleAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 48,
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            resizeMode="contain"
            style={
              Array [
                Object {
                  "borderColor": "rgb(221, 221, 229)",
                  "borderWidth": 1,
                },
                Object {
                  "height": 16,
                  "width": 24,
                },
                Array [
                  null,
                  Object {
                    "marginRight": 32,
                  },
                ],
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgb(17, 18, 54)",
                  "fontFamily": "sans-serif",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": -0.2,
                  "textAlign": "left",
                },
                Object {},
                Array [
                  Object {
                    "flex": 1,
                  },
                ],
              ]
            }
          >
            2 Two
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "rgb(221, 221, 229)",
                "borderRadius": 20,
                "borderWidth": 1,
                "height": 20,
                "justifyContent": "center",
                "width": 20,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 10,
                  "height": 10,
                  "width": 10,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;

exports[`Android should render correctly with suggested IDs 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "dialingCode": "1",
        "id": "1",
        "name": "One",
      },
      Object {
        "dialingCode": "3",
        "id": "3",
        "name": "Three",
      },
    ],
    "title": "Suggested for you",
  },
  Object {
    "data": Array [
      Object {
        "dialingCode": "0",
        "id": "0",
        "name": "Zero",
      },
    ],
    "title": "Z",
  },
  Object {
    "data": Array [
      Object {
        "dialingCode": "1",
        "id": "1",
        "name": "One",
      },
    ],
    "title": "O",
  },
  Object {
    "data": Array [
      Object {
        "dialingCode": "2",
        "id": "2",
        "name": "Two",
      },
      Object {
        "dialingCode": "3",
        "id": "3",
        "name": "Three",
      },
    ],
    "title": "T",
  },
]
`;
